:gun: Style Changes

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,9 +3,9 @@
         <a href="/" class="logo">{{ site.title }}</a>
 
         <ul class="menu">
-            <li class="menu__entry"><a href="{{ '/' | prepend: site.baseurl }}">日志</a></li>
-            <li class="menu__entry"><a href="{{ '/about' | prepend: site.baseurl }}">关于我</a></li>
-            <li class="menu__entry"><a href="{{ '/impossible-list' | prepend: site.baseurl }}">我不可能名单</a></li>
+            <li class="menu__entry"><a href="{{ '/' | prepend: site.baseurl }}">HOME</a></li>
+            <li class="menu__entry"><a href="{{ '/about' | prepend: site.baseurl }}">ABOUT</a></li>
+            <li class="menu__entry"><a href="{{ '/impossible-list' | prepend: site.baseurl }}">IMPOSSIBLE LIST</a></li>
         </ul>
     </div>
 
