--- a/_includes/page/explore.html
+++ b/_includes/page/explore.html
@@ -4,6 +4,7 @@
         {% for category in site.data.categories %}
             <li class="categories__item"><a href="{{ '/categories/' | append: category.slug | prepend: site.baseurl }}">{{ category.name }}</a></li>
         {% endfor %}
-		<li class="categories__item"><a href="{{ '/' | prepend: site.baseurl }}">万事</a></li>
+		<li class="categories__item"><a href="{{ '/' | prepend: site.baseurl }}">ALL</a></li>
+    <li><a href="https://keybase.io/chowraid/key.asc" target="_blank">AC6C 045B F0E3 D785</a></li>
     </ul>
 </div>
